--- a/views/main.css
+++ b/views/main.css
@@ -1,13 +1,16 @@
+font-family: 'Lato', sans-serif;
+
 *{
 	box-sizing: border-box;
 }
 
 body{
 	margin: auto;
-	background-color: grey;
+
 }
 .wrapper{
 	max-width: 600px;
+	padding: 80px 0 10px 0;
 	margin: auto;
 	background-color: white;
 	display: block;
@@ -25,20 +28,22 @@ body{
 
 }
 .form__field{
-	width: 90%;
+	width: 80%;
 	margin: auto;
 	height: 10vh;
 	border: 0;
 	border-bottom: 2px solid #FF8000;
 	font-size: 21px;
+	font-weight: 300;
 	padding-left: 15px;
 	
 }
 
 .form__button{
 	display: block;
-    margin: 30px;
-    width: 85%;
+    margin-top: 100px;
+    margin-bottom: 30px;
+    width: 80%;
 	background-color: #FF8000; 
     border: none;
     color: white;
@@ -46,8 +51,10 @@ body{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 26px;
+    font-size: 36px;
     text-transform: uppercase;
+    font-weight: 200;
+    letter-spacing: 2px;
 }
 
 
