--- a/views/main.css
+++ b/views/main.css
@@ -4,67 +4,107 @@
 	box-sizing: border-box;
 }
 
+
 body{
 	margin: auto;
 	font-family: 'Lato', sans-serif;
+
 }
+
 .wrapper{
-	max-width: 600px;
-	padding: 80px 0 10px 0;
+	max-width: 500px;
 	margin: auto;
 	background-color: white;
 	display: block;
-
+	text-align: center;
 	
 }
+
+h1{
+	font-size: 64px;
+	margin-bottom: 10vh;
+	font-weight: 900;
+	text-align: left;
+}
+
+.welcome{
+	padding-top: 80px;
+	display: block;
+	width: 90%;
+	margin: auto;
+
+
+}
+
 .signup__form{
+	padding-top: 80px;
 	display: block;
 	width: 100%;
 	margin: auto;
 	text-align: center;
 
-	
+}
 
+.login__form{
+	padding-top: 80px;
+	display: block;
+	width: 100%;
+	margin: auto;
+	text-align: center;
 
 }
+
+
 .form__field{
-	width: 80%;
+	width: 100%;
 	margin: auto;
 	height: 10vh;
 	border: 0;
 	border-bottom: 2px solid #FF8000;
-	font-size: 21px;
+	font-size: 24px;
+	padding-left: 20px;
 	font-weight: 300;
-	padding-left: 15px;
+
 	
+}
+
+select {
+  -webkit-appearance: none;
 }
 
 .form__button{
 	display: block;
-    margin-top: 100px;
-    margin-bottom: 30px;
-    width: 80%;
-	background-color: #FF8000; 
+    margin-top: 25px;
+    margin-bottom: 15px;
+    width: 100%;
+	background-color: #FF8000;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 36px;
+	font-family: 'Lato', sans-serif;
+    font-size: 30px;
     text-transform: uppercase;
-    font-weight: 200;
+    font-weight: 300i;
     letter-spacing: 2px;
 }
 
-
-
+.inactive--button.form__button{
+	background-color: lightgrey;
+	margin-top: 5px;
+}
 
 
 
 @media(max-width: 600px){
 	body{
-		background-color: red;
 	}
+
 }
 
+.input-error{
+	border-bottom-color: #ff0a2b;
+	background-color: #ff0a2b;
+}
