--- a/views/main.css
+++ b/views/main.css
@@ -516,16 +516,15 @@ p{
 
 a{
 	text-decoration: no-underline;
+
 }
 
 
-
-.logo{
-	margin-left: 0;
+.logo h6{
 	margin-top: 1vh;
+	margin-bottom: 10vh;
 	text-align: left;
 }
-
 
 .txt-center{
 	text-align: center;
