--- a/views/main.css
+++ b/views/main.css
@@ -485,9 +485,10 @@ body{
 h1{
 	font-size: 74px;
 	margin-bottom: 10vh;
+	margin-top: 1vh;
 	font-weight: 900;
 	text-align: left;
-	color: #FF8000;
+	color: rgba(92, 48, 255, 0.7);
 }
 
 h2{
@@ -497,6 +498,14 @@ h2{
 	font-weight: 300;
 	color: #FF8000;
 }
+
+
+h3{
+	font-size: 21px;
+	font-weight: 900;
+	text-align: left;
+}
+
 
 h6{
 	font-size: 21px;
@@ -515,14 +524,21 @@ p{
 }
 
 a{
-	text-decoration: no-underline;
+	text-decoration: none;
+	color: lightgrey;
 
+}
+
+
+a:hover{
+	text-decoration: none;
+	color: rgba(92, 48, 255, 0.7);
 }
 
 
 .logo h6{
 	margin-top: 1vh;
-	margin-bottom: 10vh;
+	margin-bottom: 3vh;
 	text-align: left;
 }
 
@@ -543,7 +559,7 @@ a{
 	padding-top: 1px;
 	display: block;
 	width: 100%;
-	margin: auto;
+	margin-bottom: 5vh;
 	
 
 }
@@ -567,7 +583,7 @@ a{
 }
 
 .signup__form{
-	padding-top: 0px;
+	padding-top: 5vh;
 	display: block;
 	width: 90%;
 	margin: auto;
@@ -576,7 +592,7 @@ a{
 }
 
 .login__form{
-	padding-top: 0px;
+	padding-top: 5vh;
 	display: block;
 	width: 90%;
 	margin: auto;
@@ -668,26 +684,26 @@ input[type="submit"].form__button:hover {
 	width: 100%;
 	background-color: white;
 	border-style: solid;
-	border-color: #FF8000;
+	border-color: rgba(92, 48, 255, 0.7);
 	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-family: 'Lato', sans-serif;
-	color: #FF8000;
+	color: rgba(92, 48, 255, 0.7);
 	font-size: 30px;
 	text-transform: uppercase;
-	font-weight: 300;
+	font-weight: 900;
 	letter-spacing: 2px;
 }
 
 .href__button:hover {
-	background-color: #FF8000;
+	background-color: rgba(55, 0, 255, 0.81);
 	color: white;
 }
 
 .inactive--button.href__button:hover {
-	background-color: #FF8000;
+	background-color: rgba(55, 0, 255, 0.81);
 	color: white;
 
 }
