--- a/views/main.css
+++ b/views/main.css
@@ -496,7 +496,7 @@ h2{
 	margin-bottom: 10vh;
 	margin-top: 1vh;
 	font-weight: 300;
-	color: #FF8000;
+	color: rgba(92, 48, 255, 0.7);
 }
 
 
@@ -610,7 +610,8 @@ a:hover{
 	height: 10vh;
 	min-height: 80px;
 	border: 0;
-	border-bottom: 2px solid #FF8000;
+	border-bottom: 2px solid;
+	border-bottom-color: rgba(92, 48, 255, 0.7);
 	border-radius: 0;
 	font-size: 24px;
 	padding-left: 20px;
@@ -628,7 +629,7 @@ a:hover{
 
 .w3-progress-container{
 	width:100%;
-	height:1.5em;
+	height:6px;
 	position:relative;
 	background-color:#f1f1f1
 }
@@ -659,13 +660,13 @@ input[type="submit"].form__button{
     width: 100%;
 	background-color: white;
     border-style: solid;
-    border-color: #FF8000;
+    border-color: rgba(92, 48, 255, 0.7);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
 	font-family: 'Lato', sans-serif;
-	color: #FF8000;
+	color: rgba(92, 48, 255, 0.7);
     font-size: 30px;
     text-transform: uppercase;
     font-weight: 300;
@@ -673,7 +674,7 @@ input[type="submit"].form__button{
 }
 
 input[type="submit"].form__button:hover {
-	background-color: #FF8000;
+	background-color: rgba(55, 0, 255, 0.81);
 	color: white;
 
 }
@@ -716,7 +717,7 @@ input[type="submit"].inactive--button.form__button{
 
 input[type="submit"].inactive--button.form__button:hover {
 	margin-top: 5px;
-	background-color: #FF8000;
+	background-color: rgba(55, 0, 255, 0.81);
 	color: white;
 
 }
