--- a/views/main.css
+++ b/views/main.css
@@ -530,7 +530,6 @@ a{
 }
 
 
-
 a:hover{
 	color: rgba(92, 48, 255, 0.7);
 	text-decoration: none;
@@ -540,8 +539,10 @@ a:hover{
 
 .logo h6{
 	margin-top: 1vh;
-	margin-bottom: 3vh;
+	margin-bottom: 9vh;
+	margin-left: 1vw;
 	text-align: left;
+	margin
 }
 
 .txt-center{
@@ -561,7 +562,7 @@ a:hover{
 	padding-top: 1px;
 	display: block;
 	width: 100%;
-	margin-bottom: 5vh;
+	margin-bottom: 10vh;
 	
 
 }
@@ -623,12 +624,13 @@ a:hover{
 }
 
 .progress-bar{
-	margin-top: 100px;
+	margin-top: 20px;
 
 }
 
 .w3-progress-container{
-	width:100%;
+	margin: auto;
+	width:90%;
 	height:6px;
 	position:relative;
 	background-color:#f1f1f1
@@ -659,9 +661,9 @@ input[type="submit"].form__button{
     margin-bottom: 15px;
     width: 100%;
 	background-color: white;
-    border-style: solid;
+    border: solid 2px;
     border-color: rgba(92, 48, 255, 0.7);
-    padding: 15px 32px;
+    padding: 15px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -669,7 +671,7 @@ input[type="submit"].form__button{
 	color: rgba(92, 48, 255, 0.7);
     font-size: 30px;
     text-transform: uppercase;
-    font-weight: 300;
+    font-weight: 500;
     letter-spacing: 2px;
 }
 
@@ -686,9 +688,9 @@ input[type="submit"].form__button:hover {
 	margin-bottom: 15px;
 	width: 100%;
 	background-color: white;
-	border-style: solid;
+	border: solid 2px;
 	border-color: rgba(92, 48, 255, 0.7);
-	padding: 15px 32px;
+	padding: 15px 15px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
@@ -696,7 +698,7 @@ input[type="submit"].form__button:hover {
 	color: rgba(92, 48, 255, 0.7);
 	font-size: 30px;
 	text-transform: uppercase;
-	font-weight: 900;
+	font-weight: 500;
 	letter-spacing: 2px;
 }
 
