--- a/views/main.css
+++ b/views/main.css
@@ -523,6 +523,16 @@ p{
 	color: dimgrey;
 }
 
+p.error {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1.6em;
+	margin: auto;
+	text-align: center;
+	line-height: 1.2em;
+	padding-bottom: 0vh;
+	color: red;
+}
+
 a{
 	text-decoration: none;
 	border-bottom: 2px solid;
