--- a/views/main.css
+++ b/views/main.css
@@ -321,7 +321,7 @@ button:-moz-focusring,
  */
 
 fieldset {
-	border: 1px solid #c0c0c0;
+	border: 0px solid #c0c0c0;
 	margin: 0 2px;
 	padding: 0.35em 0.625em 0.75em;
 }
@@ -648,7 +648,7 @@ a:hover{
 
 
 .w3-progressbar{
-	background-color:#757575;
+	background-color: green;
 	height:100%;
 	position:absolute;
 	line-height:inherit
@@ -753,4 +753,68 @@ input[type="submit"].inactive--button.form__button:hover {
 :focus {
 	outline-color: transparent;
 	outline-style: none;
+}
+
+
+/* FEEDBACK */
+
+.rating {
+    width: 80%;
+	margin: auto;
+	text-align: center;
+    
+}
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
+   follow these rules. Every browser that supports :checked also supports :not(), so
+   it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+    position:absolute;
+    margin:auto;
+    text-align:left;
+    top:-9999px;
+    clip:rect(0,0,0,0);
+}
+
+.rating:not(:checked) > label {
+    float:right;
+    text-align: left;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:300%;
+    line-height:1.2;
+    color:#ddd;
+}
+
+.rating:not(:checked) > label:before {
+    content: '* ';
+}
+
+.rating > input:checked ~ label {
+    color: #f70;
+   
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+   
+}
+
+.rating > label:active {
+    position:relative;
+    top:2px;
+    left:2px;
 }
