--- a/views/css/main.css
+++ b/views/css/main.css
@@ -141,7 +141,42 @@ a:hover{
 	width: 90%;
 	margin: auto;
 	text-align: center;
+	max-width: 100%;
 
+}
+
+textarea{
+	margin: auto;
+	width: 100%;
+	height: 15vh;
+	padding: 10px;
+	border-style: none;
+	resize: none;
+	overflow: auto;	
+	background: rgba(255, 255, 255, 0.8);
+	font-family: 'Source Sans Pro', sans-serif;
+	line-height: 1.5;
+	font-size: 21px;
+
+
+}
+.upload__btn{
+    overflow: hidden;
+    position: relative;
+}
+
+.upload__btn [type=file] {
+    cursor: inherit;
+    display: block;
+    font-size: 0px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
 }
 
 .login__form{
