--- a/views/css/main.css
+++ b/views/css/main.css
@@ -90,7 +90,7 @@ a:hover{
 
 .logo h6{
 	margin-top: 1vh;
-	margin-bottom: 9vh;
+	margin-bottom: 6vh;
 	margin-left: 1vw;
 	text-align: left;
 }
@@ -148,8 +148,8 @@ a:hover{
 textarea{
 	margin: auto;
 	width: 100%;
-	height: 15vh;
-	padding: 10px;
+	height: 150px;
+	padding: 20px;
 	border-style: none;
 	resize: none;
 	overflow: auto;	
@@ -157,10 +157,28 @@ textarea{
 	font-family: 'Source Sans Pro', sans-serif;
 	line-height: 1.5;
 	font-size: 21px;
-
+	font-weight: 300;
 
 }
-.upload__btn{
+
+.employee--good-code{
+	margin: auto;
+	padding-top: 10px;
+	font-size: 18px;
+	padding-bottom: 0px;
+
+}
+
+.good-code{
+	margin: auto;
+	font-family: Lato;
+	font-weight: 300;
+	font-size: 28px;
+	text-align: center;
+
+}
+
+.upload__btn {
     overflow: hidden;
     position: relative;
 }
@@ -199,7 +217,7 @@ textarea{
 	border-bottom: 2px solid;
 	border-bottom-color: rgba(92, 48, 255, 0.7);
 	border-radius: 0;
-	font-size: 24px;
+	font-size: 21px;
 	padding-left: 20px;
 	padding-right: 20px;
 	font-weight: 300;
@@ -403,6 +421,8 @@ input[type="submit"].inactive--button.form__button:hover {
     width:200px;
     height: 200px;
     border-radius: 50%;
+    margin-top: -10px;
+    margin-bottom: 30px;
 }
 .granular-rating-title{
     font-size: 120%;
