--- a/views/css/sliderBar.css
+++ b/views/css/sliderBar.css
@@ -1,13 +1,15 @@
 .slider-wrapper{
-    width:100%;
-    font-size: 2em;
+    width:90%;
+    margin: auto;
+    font-size: 21px;
     font-family: 'Lato', sans-serif;
+    font-weight: 500;
     text-align: left;
-    padding: 10px 0 10px 0;
+    padding: 16px 0 16px 0;
 }
 .slider-bar {
     display: block;
-    height: 6px;
+    height: 3px;
     width: 100%;
     background-color: #e6e6e6;
     box-sizing: border-box;
@@ -23,7 +25,7 @@
 }
 .slider-red{
     width:0;
-    background-color: #cd453d;
+    background-color: red;
     height: 100%;
     float:left;
     transition: 0.3s;
@@ -32,13 +34,13 @@
 }
 .slider-orange {
     width:0;
-    background-color: #FF8000;
+    background-color: rgba(92, 48, 255, 0.7);
     height: 100%;
     float:left;
     transition: 0.3s;
 }
 .slider-after{
-    background-color: #FF8000;
+    background-color: rgba(92, 48, 255, 0.7);
     width: 12px;
     height: 12px;
     border-radius: 50%;
