--- a/views/css/main.css
+++ b/views/css/main.css
@@ -70,7 +70,7 @@ p.error {
 	margin: auto;
 	text-align: center;
 	line-height: 1.2em;
-	padding-bottom: 0vh;
+	padding: 50px 0px 20px 0px;
 	color: red;
 }
 
@@ -149,7 +149,7 @@ textarea{
 	margin: auto;
 	width: 100%;
 	height: 150px;
-	padding: 20px;
+	padding: 10px 20px 10px 20px;
 	border-style: none;
 	resize: none;
 	overflow: auto;	
