--- a/views/css/main.css
+++ b/views/css/main.css
@@ -140,14 +140,26 @@ a:hover{
 
 }
 
-.signup__form{
+.signup {
 	padding-top: 5vh;
+}
+
+.signup__form{	
 	display: block;
 	width: 90%;
 	margin: auto;
 	text-align: center;
 	max-width: 100%;
 
+}
+
+.employee__profile {
+	padding-top: 5vh;
+	display: block;
+	width: 90%;
+	margin: auto;
+	text-align: center;
+	max-width: 100%;
 }
 .companyKind{
 	margin: auto;
@@ -229,6 +241,10 @@ textarea{
 	line-height: 1.5;
 	font-size: 21px;
 	font-weight: 300;
+	border: 0;
+	border-bottom: 2px solid;
+	border-bottom-color: rgba(92, 48, 255, 0.7);
+	border-radius: 0;
 
 }
 
@@ -268,8 +284,11 @@ textarea{
     top: 0;
 }
 
-.login__form{
+.login {
 	padding-top: 5vh;
+}
+
+.login__form{
 	display: block;
 	width: 90%;
 	margin: auto;
@@ -279,6 +298,7 @@ textarea{
 .form__field{
 	width: 100%;
 	margin: auto;
+	margin-bottom: 3px;
 	height: 10vh;
 	min-height: 80px;
 	border: 0;
@@ -489,10 +509,11 @@ input[type="submit"].inactive--button.form__button:hover {
     width:200px;
     height: 200px;
     border-radius: 50%;
-    margin-top: -10px;
+    /*margin-top: 5vh;*/
     margin-bottom: 30px;
 }
 .granular-rating-title{
+	padding: 20px 0px 40px 0px;
     font-size: 120%;
 }
 .fieldset-title{
