--- a/views/css/main.css
+++ b/views/css/main.css
@@ -541,8 +541,24 @@ input[type="submit"].inactive--button.form__button:hover {
 }
 
 /* image */
+
 .employee > h2{
     margin-bottom: 20px;
+}
+
+.search__img{
+    width:200px;
+    height: 200px;
+    border-radius: 50%;
+    /*margin-top: 5vh;*/
+    margin-bottom: 30px;
+}
+.search__link{
+
+}
+
+.suggest{
+	text-align: center;
 }
 .employee-image{
     width:200px;
