--- a/views/css/main.css
+++ b/views/css/main.css
@@ -254,6 +254,7 @@ a:hover{
 .employeeThumbnail, .employeeRating {
   width: 60px;
   height: 60px;
+	border-radius: 50%;
 }
 .employeeName {
   width:200px;
