--- a/views/css/main.css
+++ b/views/css/main.css
@@ -59,6 +59,10 @@ h6{
 	color: lightgrey;
 
 }
+logo-text, logout{
+    color: lightgrey;
+    text-decoration: none;
+}
 
 p{
 	font-family: 'Source Sans Pro', sans-serif;
@@ -576,4 +580,9 @@ input[type="submit"].inactive--button.form__button:hover {
     font-style: italic;
     font-size: 120%;
     margin-bottom: -10px;
+}
+
+
+.logout{
+    float: right;
 }
