--- a/views/css/feedback.css
+++ b/views/css/feedback.css
@@ -59,16 +59,17 @@
     width: 100%;
     box-sizing: border-box;
 }
+
 .feedback__nav-btn{
-    width: 50%;
-    float: left;
+    display: block;
+    margin: auto;
+    width: 90%;
     background-color: white;
     border: solid rgba(92, 48, 255, 0.7) 2px;
     padding: 10px 10px;
-
     font-family: 'Lato', sans-serif;
     color: rgba(92, 48, 255, 0.7);
-    font-size: 20px;
+    font-size: 21px;
     font-weight: 500;
     cursor: pointer;
     text-transform: uppercase;
@@ -85,5 +86,6 @@
 }
 
 .feedback__popdown {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 1.5;
 }
