--- a/views/css/main.css
+++ b/views/css/main.css
@@ -59,9 +59,10 @@ h6{
 	color: lightgrey;
 
 }
-logo-text, logout{
+.logo-text, .logout{
+	font-size: 21px;
     color: lightgrey;
-    text-decoration: none;
+    border-bottom: none;
 }
 
 p{
@@ -110,7 +111,8 @@ a:hover{
 }
 
 .welcome {
-	padding-top: 0px;
+	padding-top: 5vh;
+	padding-bottom: 10vh;
 	display: block;
 	width: 90%;
 	margin: auto;
@@ -122,12 +124,17 @@ a:hover{
 	display: block;
 	width: 100%;
 	margin-bottom: 10vh;
-	
+
+}
+.header-bar {
+	padding-top: 1vh;
+	text-align: left;
 
 }
 
 .employee {
-	padding-top: 0px;
+	padding-top: 5vh;
+	padding-bottom: 10vh;
 	display: block;
 	width: 90%;
 	margin: auto;
@@ -161,7 +168,6 @@ a:hover{
 .company__profile {
 	padding-top: 5vh;
 	display: block;
-
 	margin: auto;
 	text-align: center;
 	max-width: 100%;
@@ -188,7 +194,6 @@ a:hover{
 	width: 100%;
 	margin: auto;
 	text-align: left;
-
 	font-size: 32px;
 	font-weight: 300;
 
@@ -259,17 +264,22 @@ a:hover{
   width: 60px;
   height: 60px;
 	border-radius: 50%;
+
 }
+
 .employeeName {
   width:200px;
   font-size: 28px;
   padding-top: 14px;
   font-weight: 300;
   text-align: left;
+
 }
+
+
 .employeeRating{
 	padding-top: 12px;
-	font-size: 32px;
+	font-size: 28px;
 }
 
 textarea{
@@ -395,13 +405,13 @@ input[type="submit"].form__button{
 	background-color: white;
     border: solid 2px;
     border-color: rgba(92, 48, 255, 0.7);
-    padding: 15px 15px;
+    padding: 10px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
 	font-family: 'Lato', sans-serif;
 	color: rgba(92, 48, 255, 0.7);
-    font-size: 30px;
+    font-size: 21px;
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 2px;
@@ -422,13 +432,13 @@ input[type="submit"].form__button:hover {
 	background-color: white;
 	border: solid 2px;
 	border-color: rgba(92, 48, 255, 0.7);
-	padding: 15px 15px;
+	padding: 10px 10px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-family: 'Lato', sans-serif;
 	color: rgba(92, 48, 255, 0.7);
-	font-size: 30px;
+	font-size: 21px;
 	text-transform: uppercase;
 	font-weight: 500;
 	letter-spacing: 2px;
@@ -558,12 +568,33 @@ input[type="submit"].inactive--button.form__button:hover {
     /*margin-top: 5vh;*/
     margin-bottom: 30px;
 }
+
+.request__wrapper {
+	margin:auto;
+	margin-top: 5vh;
+	width: 90%;
+	text-align: left;
+}
+
+.request__alert {
+	font-weight: 300;
+	text-align: left;
+	font-size: 21px;
+	line-height: 1.5em;
+	color: dimgrey;
+
+}
+
+.request__wrapper--button-margin {
+	margin-top: 3vh;
+}
 .search__link{
 
 }
 
 .suggest{
-	text-align: center;
+	margin-top: 5vh;
+
 }
 .employee-image{
     width:200px;
@@ -585,4 +616,7 @@ input[type="submit"].inactive--button.form__button:hover {
 
 .logout{
     float: right;
+    font-size: 21px;
+    color: lightgrey;
+    text-decoration: none;
 }
