--- a/views/css/main.css
+++ b/views/css/main.css
@@ -220,10 +220,12 @@ a:hover{
 
 .container__companyAddress > div {
 	margin:10px;
+	margin: auto;
 }
 
 .addressPin{
 	width: 60px;
+	font-size: 250%
 }
 
 .address{
